--- a/src/components/navbar/footerStyle.css
+++ b/src/components/navbar/footerStyle.css
@@ -4,6 +4,7 @@
   /* padding-top: 5rem; */
   padding-top: 7rem;
   padding-bottom: 80px;
+  color: #fff
 }
 #footer2 {
   background: #f7f7f7;
@@ -14,15 +15,7 @@
   padding-bottom: 80px;
   background-image: url(../images/cards/v748-toon-111.png);
 }
-.logo-footer {
-  /* max-width: 300px; */
-}
-.social-links {
-  /* display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center; */
-}
+
 .social-links h2 {
   padding-bottom: 15px;
   font-size: 20px;
@@ -37,7 +30,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  color: #777777;
+  color: #fff;
 }
 .social-icons a {
   /* font-size: 18px; */
@@ -47,10 +40,10 @@
       border-radius: 3px;
     color: #82074a; */
   /* margin-right: 18px; */
-  color: #777777;
+  color: #fff;
 }
 .social-icons a:hover {
-  color: #000;
+  color: var(--primary);
 }
 .social-icons a i {
   box-shadow: rgb(0 0 0 / 8%) 0px 4px 12px;
@@ -77,16 +70,16 @@ li {
 .use-links li i {
   font-size: 14px;
   padding-right: 8px;
-  color: #898989;
+  color: #fff;
 }
 .use-links li a {
-  color: #303030;
+  color: #ffff;
   font-size: 15px;
   font-weight: 500;
-  color: #777777;
+  color: #fff;
 }
 .use-links li a:hover {
-  color: #000;
+  color: var(--primary);
 }
 .address h2 {
   padding-bottom: 15px;
@@ -100,7 +93,7 @@ li {
   color: #303030;
   font-size: 15px;
   font-weight: 500;
-  color: #777777;
+  color: #ffff;
 }
 .address-links li i {
   font-size: 16px;
@@ -117,7 +110,7 @@ li {
 }
 .address-links {
   line-height: 32px;
-  color: #777777;
+  color: #ffff;
 }
 .copy-right-sec {
   padding: 1.8rem;
