--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,14 @@
 .mb-50 {
   margin-bottom: 50px;
 }
+.mt-50 {
+  margin-top: 50px;
+}
+
+
+.slick-next:before {
+  content: none !important;;
+}
+.slick-prev:before {
+  content: none !important;;
+}
