--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color: #323231;
   background-color: rgb(247, 247, 247);
-  --primary: #f36b21;
+  --primary: #dbab0e;
   --secondary: #000000;
 }
 
@@ -150,3 +150,34 @@
       height: 120vh;
     }
   }
+
+
+  .scroll-to-top-button {
+    position: fixed;
+    bottom: 40px; /* Position the button above the footer */
+    right: 40px; /* Position the button from the right edge */
+    background-color: var(--primary); /* Use a color from your color schema */
+    color: #fff; /* Text color */
+    border: none;
+    border-radius: 50%;
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    opacity: 0.8;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+  }
+  
+  .scroll-to-top-button:hover {
+    opacity: 1;
+    transform: translateY(-3px);
+  }
+  
+  .scroll-to-top-button:focus {
+    outline: none;
+  }
+  
+  .scroll-to-top-button svg {
+    font-size: 20px; /* Adjust icon size */
+  }
+  
