--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,10 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color: #323231;
   background-color: rgb(247, 247, 247);
-  --primary: #dbab0e;
+  --primary: #f44419;
   --secondary: #000000;
+  --sb-track-color: #000000;
+  --sb-thumb-color: #00313f;
 }
 
 .ubuntu-bold {
@@ -125,59 +127,82 @@
   margin-top: 50px;
 }
 
-
 .slick-next:before {
-  content: none !important;;
+  content: none !important;
 }
 .slick-prev:before {
-  content: none !important;;
+  content: none !important;
 }
 
 .review-section {
-  height: "100vh",
+  height: "100vh";
 }
 
-.active {
+nav .active {
   background-color: var(--primary);
   border-radius: 10px;
 
   color: white;
 }
 
+@media (max-width: 768px) {
+  .review-section {
+    height: 120vh;
+  }
+}
 
-  @media (max-width: 768px) {
-    .review-section {
-      height: 120vh;
-    }
-  }
+.scroll-to-top-button {
+  position: fixed;
+  bottom: 40px; /* Position the button above the footer */
+  right: 40px; /* Position the button from the right edge */
+  background-color: var(--primary); /* Use a color from your color schema */
+  color: #fff; /* Text color */
+  border: none;
+  border-radius: 50%;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  opacity: 0.8;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 100;
+}
 
+.scroll-to-top-button:hover {
+  opacity: 1;
+  transform: translateY(-3px);
+}
 
-  .scroll-to-top-button {
-    position: fixed;
-    bottom: 40px; /* Position the button above the footer */
-    right: 40px; /* Position the button from the right edge */
-    background-color: var(--primary); /* Use a color from your color schema */
-    color: #fff; /* Text color */
-    border: none;
-    border-radius: 50%;
-    padding: 10px 15px;
-    cursor: pointer;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    opacity: 0.8;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    z-index: 100;
+.scroll-to-top-button:focus {
+  outline: none;
+}
+
+.scroll-to-top-button svg {
+  font-size: 20px; /* Adjust icon size */
+}
+
+/* Custom scrollbar for the Sider */
+.ant-layout-sider {
+  overflow: auto; /* Ensure overflow is enabled */
+}
+
+.ant-layout-sider::-webkit-scrollbar {
+  width: 10px;
+}
+
+.ant-layout-sider::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 3px;
+}
+
+.ant-layout-sider::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 3px;
+  border: 2px solid #010e1a; /* Optional, for a border around the thumb */
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  .ant-layout-sider {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
   }
-  
-  .scroll-to-top-button:hover {
-    opacity: 1;
-    transform: translateY(-3px);
-  }
-  
-  .scroll-to-top-button:focus {
-    outline: none;
-  }
-  
-  .scroll-to-top-button svg {
-    font-size: 20px; /* Adjust icon size */
-  }
-  
+}
+
