--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   color: #323231;
   background-color: rgb(247, 247, 247);
   --primary: #f44419;
-  --secondary: #000000;
+  --secondary: #0e0e0e;
   --sb-track-color: #000000;
   --sb-thumb-color: #00313f;
 }
