--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -21,8 +21,8 @@
 
 
 .slider-container {
-    height: 500px !important; 
-    position: relative;
+    /* height: 500px !important; 
+    position: relative; */
   }
   
 
